# interpretable-clustering

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml  setup.py
data/: climate_depth_costs.csv  climate_leaf_costs.csv
data/synthetic/: aniso.csv  blobs.csv  labyrinth.csv  labyrinth.data  labyrinth_labels.csv  spiral.csv  spiral_noisy.csv
examples/: climate.ipynb  climate_older.ipynb  datasets.ipynb  dbscan-example.ipynb  dbscan-examples.ipynb  decision_sets.ipynb  examples.ipynb  experiments.ipynb  kmeans_example.pgf  mnist.ipynb  pond_lake.ipynb  testing.ipynb
experiments/: __init__.py  climate.py  experiments.py  modules.py
experiments/aniso/: max_rules.py  robustness.py  robustness_no_outliers.py
experiments/anuran/: anuran.py  anuran_comparison.py  coverage.py  explanation_tree.py  interpretable_measurements.py  max_rules.py  plot_distributions.py  relative_coverage.py  relative_coverage2.py  robustness.py  robustness_no_outliers.py
experiments/blobs/: max_rules.py  robustness.py  robustness_no_outliers.py
experiments/climate/: climate.py  climate2.py  climate_comparison.py  climate_point_comparison.py  climate_point_comparison2.py  error.txt  explanation_tree.py  interpretable_measurements.py  lambdas.py  max_rules.py  out.txt  plot_distributions.py  relative_coverage.py  robustness.py  robustness_no_outliers.py
experiments/covertype/: coverage.py  covertype.py  covertype_comparison.py  covertype_comparison2.py  covertype_comparison3.py  explanation_tree.py  interpretable_measurements.py  plot_distributions.py  relative_coverage.py  (+1 more)
intercluster/: __init__.py  plot.py  plotting.py  utils.py
main/: decision_sets.py  experiments.py  grid.py  ids.py  rule_clustering.py  rule_pruning.py  rules.py  tree.py  tree_clustering.py  tree_rules.py  utils.py
notebooks/: climate.ipynb  datasets.ipynb  decision_sets.ipynb  examples.ipynb
older_tests/: test_centroid_splitter.py  test_unsupervised_splitter.py
ruleclustering/: __init__.py  decision_sets.py  experiments.py  modules.py  rule_clustering.py  rule_pruning.py  tree.py  utils.py
tests/: conftest.py  test_splitter.py  test_utils.py
(+376 files in other folders)
