[project]
name = "intercluster"
version = "0.1.0"
description = "Clustering with Rules"
authors = [
    {name = "Kevin Quinn"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "numpy (==1.26.4)",
    "pandas (==2.2.3)",
    "scikit-learn (==1.5.2)",
    "geopandas (==1.0.1)",
    "matplotlib (==3.9.3)",
    "seaborn (==0.13.2)",
    "networkx (==3.2.1)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pytest (>=8.3.3,<9.0.0)",
    "wheel (==0.45.1)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "setuptools", "cython", "numpy"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "intercluster", from = "src"},
]
include = [
    { path = "intercluster/**/*.so", format = "wheel" },
]
# if not already excluded via .gitignore
exclude = [
    "**/*.c"
]

[tool.poetry.build]
script = "build.py"

[tool.poetry.group.build.dependencies]
setuptools = "^75.1.0"
cython = "^3.0.12"
